Project/Phase1/syntax copy.output
Terminals unused in grammar

    INVALID_CHAR
    WRONG_ID
    UNKNOWN_CHAR


State 17 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ε
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList error
    8       | Specifier error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT ID LC DefList RC
   14                | STRUCT ID
   15                | STRUCT ID LC DefList error

   16 VarDec: ID
   17       | VarDec LB INT RB
   18       | VarDec LB INT error

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | ID LP VarList error
   22       | ID LP error

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC

   27 StmtList: ε
   28         | Stmt StmtList

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | Exp error
   36     | RETURN Exp error
   37     | IF LP Exp error Stmt
   38     | WHILE LP Exp error Stmt

   39 DefList: ε
   40        | Def DefList

   41 Def: Specifier DecList SEMI
   42    | Specifier DecList error
   43    | error DecList SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGN Exp

   48 Exp: Exp ASSIGN Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp LT Exp
   52    | Exp LE Exp
   53    | Exp GT Exp
   54    | Exp GE Exp
   55    | Exp NE Exp
   56    | Exp EQ Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp MUL Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | MINUS Exp
   63    | NOT Exp
   64    | ID LP Args RP
   65    | ID LP RP
   66    | Exp LB Exp RB
   67    | Exp DOT ID
   68    | ID
   69    | INT
   70    | FLOAT
   71    | CHAR
   72    | ILLEGAL_TOKEN
   73    | INVALID_NUMBER
   74    | Exp ILLEGAL_TOKEN Exp
   75    | LP Exp error
   76    | ID LP Args error
   77    | ID LP error
   78    | Exp LB Exp error

   79 Args: Exp COMMA Args
   80     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 15 18 21 22 35 36 37 38 42 43 75 76 77 78
    ILLEGAL_TOKEN <node_ptr> (258) 72 74
    LOWER_ELSE (259)
    ELSE <node_ptr> (260) 33
    TYPE <node_ptr> (261) 11
    INT <node_ptr> (262) 17 18 69
    CHAR <node_ptr> (263) 71
    FLOAT <node_ptr> (264) 70
    STRUCT <node_ptr> (265) 13 14 15
    ID <node_ptr> (266) 13 14 15 16 19 20 21 22 64 65 67 68 76 77
    IF <node_ptr> (267) 32 33 37
    WHILE <node_ptr> (268) 34 38
    RETURN <node_ptr> (269) 31 36
    COMMA <node_ptr> (270) 10 23 45 79
    ASSIGN <node_ptr> (271) 47 48
    OR <node_ptr> (272) 50
    AND <node_ptr> (273) 49
    LT <node_ptr> (274) 51
    LE <node_ptr> (275) 52
    GT <node_ptr> (276) 53
    GE <node_ptr> (277) 54
    NE <node_ptr> (278) 55
    EQ <node_ptr> (279) 56
    PLUS <node_ptr> (280) 57
    MINUS <node_ptr> (281) 58 62
    MUL <node_ptr> (282) 59
    DIV <node_ptr> (283) 60
    NOT <node_ptr> (284) 63
    DOT <node_ptr> (285) 67
    LP <node_ptr> (286) 19 20 21 22 32 33 34 37 38 61 64 65 75 76 77
    RP <node_ptr> (287) 19 20 32 33 34 61 64 65
    LB <node_ptr> (288) 17 18 66 78
    RB <node_ptr> (289) 17 66
    SEMI <node_ptr> (290) 4 5 29 31 41 43
    LC <node_ptr> (291) 13 15 26
    RC <node_ptr> (292) 13 26
    INVALID_CHAR <node_ptr> (293)
    WRONG_ID <node_ptr> (294)
    UNKNOWN_CHAR <node_ptr> (295)
    INVALID_NUMBER <node_ptr> (296) 73


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    Program <node_ptr> (43)
        on left: 1
        on right: 0
    ExtDefList <node_ptr> (44)
        on left: 2 3
        on right: 1 3
    ExtDef <node_ptr> (45)
        on left: 4 5 6 7 8
        on right: 3
    ExtDecList <node_ptr> (46)
        on left: 9 10
        on right: 4 7 10
    Specifier <node_ptr> (47)
        on left: 11 12
        on right: 4 5 6 7 8 25 41 42
    StructSpecifier <node_ptr> (48)
        on left: 13 14 15
        on right: 12
    VarDec <node_ptr> (49)
        on left: 16 17 18
        on right: 9 10 17 18 25 46 47
    FunDec <node_ptr> (50)
        on left: 19 20 21 22
        on right: 6
    VarList <node_ptr> (51)
        on left: 23 24
        on right: 19 21 23
    ParamDec <node_ptr> (52)
        on left: 25
        on right: 23 24
    CompSt <node_ptr> (53)
        on left: 26
        on right: 6 30
    StmtList <node_ptr> (54)
        on left: 27 28
        on right: 26 28
    Stmt <node_ptr> (55)
        on left: 29 30 31 32 33 34 35 36 37 38
        on right: 28 32 33 34 37 38
    DefList <node_ptr> (56)
        on left: 39 40
        on right: 13 15 26 40
    Def <node_ptr> (57)
        on left: 41 42 43
        on right: 40
    DecList <node_ptr> (58)
        on left: 44 45
        on right: 41 42 43 45
    Dec <node_ptr> (59)
        on left: 46 47
        on right: 44 45
    Exp <node_ptr> (60)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 29 31 32 33 34 35 36 37 38 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 66 67 74 75 78 79 80
    Args <node_ptr> (61)
        on left: 79 80
        on right: 64 76 79


State 0

    0 $accept: • Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 Specifier: TYPE •

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT • ID LC DefList RC
   14                | STRUCT • ID
   15                | STRUCT • ID LC DefList error

    ID  shift, and go to state 8


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef • ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • ExtDecList error
    8       | Specifier • error

    error  shift, and go to state 11
    ID     shift, and go to state 12
    SEMI   shift, and go to state 13

    ExtDecList  go to state 14
    VarDec      go to state 15
    FunDec      go to state 16


State 7

   12 Specifier: StructSpecifier •

    $default  reduce using rule 12 (Specifier)


State 8

   13 StructSpecifier: STRUCT ID • LC DefList RC
   14                | STRUCT ID •
   15                | STRUCT ID • LC DefList error

    LC  shift, and go to state 17

    $default  reduce using rule 14 (StructSpecifier)


State 9

    0 $accept: Program $end •

    $default  accept


State 10

    3 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 3 (ExtDefList)


State 11

    8 ExtDef: Specifier error •

    $default  reduce using rule 8 (ExtDef)


State 12

   16 VarDec: ID •
   19 FunDec: ID • LP VarList RP
   20       | ID • LP RP
   21       | ID • LP VarList error
   22       | ID • LP error

    LP  shift, and go to state 18

    $default  reduce using rule 16 (VarDec)


State 13

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 14

    4 ExtDef: Specifier ExtDecList • SEMI
    7       | Specifier ExtDecList • error

    error  shift, and go to state 19
    SEMI   shift, and go to state 20


State 15

    9 ExtDecList: VarDec •
   10           | VarDec • COMMA ExtDecList
   17 VarDec: VarDec • LB INT RB
   18       | VarDec • LB INT error

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 9 (ExtDecList)


State 16

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 23

    CompSt  go to state 24


State 17

   13 StructSpecifier: STRUCT ID LC • DefList RC
   15                | STRUCT ID LC • DefList error

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error  [reduce using rule 39 (DefList)]
    RC     reduce using rule 39 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 27
    Def              go to state 28


State 18

   19 FunDec: ID LP • VarList RP
   20       | ID LP • RP
   21       | ID LP • VarList error
   22       | ID LP • error

    error   shift, and go to state 29
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 30

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 32
    ParamDec         go to state 33


State 19

    7 ExtDef: Specifier ExtDecList error •

    $default  reduce using rule 7 (ExtDef)


State 20

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 21

   10 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 15


State 22

   17 VarDec: VarDec LB • INT RB
   18       | VarDec LB • INT error

    INT  shift, and go to state 36


State 23

   26 CompSt: LC • DefList StmtList RC

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    ILLEGAL_TOKEN   reduce using rule 39 (DefList)
    INT             reduce using rule 39 (DefList)
    CHAR            reduce using rule 39 (DefList)
    FLOAT           reduce using rule 39 (DefList)
    ID              reduce using rule 39 (DefList)
    IF              reduce using rule 39 (DefList)
    WHILE           reduce using rule 39 (DefList)
    RETURN          reduce using rule 39 (DefList)
    MINUS           reduce using rule 39 (DefList)
    NOT             reduce using rule 39 (DefList)
    LP              reduce using rule 39 (DefList)
    LC              reduce using rule 39 (DefList)
    RC              reduce using rule 39 (DefList)
    INVALID_NUMBER  reduce using rule 39 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 37
    Def              go to state 28


State 24

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 25

   43 Def: error • DecList SEMI

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 26

   41 Def: Specifier • DecList SEMI
   42    | Specifier • DecList error

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 41
    Dec      go to state 40


State 27

   13 StructSpecifier: STRUCT ID LC DefList • RC
   15                | STRUCT ID LC DefList • error

    error  shift, and go to state 42
    RC     shift, and go to state 43


State 28

   40 DefList: Def • DefList

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error           [reduce using rule 39 (DefList)]
    ILLEGAL_TOKEN   reduce using rule 39 (DefList)
    INT             reduce using rule 39 (DefList)
    CHAR            reduce using rule 39 (DefList)
    FLOAT           reduce using rule 39 (DefList)
    ID              reduce using rule 39 (DefList)
    IF              reduce using rule 39 (DefList)
    WHILE           reduce using rule 39 (DefList)
    RETURN          reduce using rule 39 (DefList)
    MINUS           reduce using rule 39 (DefList)
    NOT             reduce using rule 39 (DefList)
    LP              reduce using rule 39 (DefList)
    LC              reduce using rule 39 (DefList)
    RC              reduce using rule 39 (DefList)
    INVALID_NUMBER  reduce using rule 39 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 44
    Def              go to state 28


State 29

   22 FunDec: ID LP error •

    $default  reduce using rule 22 (FunDec)


State 30

   20 FunDec: ID LP RP •

    $default  reduce using rule 20 (FunDec)


State 31

   25 ParamDec: Specifier • VarDec

    ID  shift, and go to state 34

    VarDec  go to state 45


State 32

   19 FunDec: ID LP VarList • RP
   21       | ID LP VarList • error

    error  shift, and go to state 46
    RP     shift, and go to state 47


State 33

   23 VarList: ParamDec • COMMA VarList
   24        | ParamDec •

    COMMA  shift, and go to state 48

    $default  reduce using rule 24 (VarList)


State 34

   16 VarDec: ID •

    $default  reduce using rule 16 (VarDec)


State 35

   10 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 10 (ExtDecList)


State 36

   17 VarDec: VarDec LB INT • RB
   18       | VarDec LB INT • error

    error  shift, and go to state 49
    RB     shift, and go to state 50


State 37

   26 CompSt: LC DefList • StmtList RC

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    IF              shift, and go to state 56
    WHILE           shift, and go to state 57
    RETURN          shift, and go to state 58
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    LC              shift, and go to state 23
    INVALID_NUMBER  shift, and go to state 62

    $default  reduce using rule 27 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 38

   17 VarDec: VarDec • LB INT RB
   18       | VarDec • LB INT error
   46 Dec: VarDec •
   47    | VarDec • ASSIGN Exp

    ASSIGN  shift, and go to state 67
    LB      shift, and go to state 22

    $default  reduce using rule 46 (Dec)


State 39

   43 Def: error DecList • SEMI

    SEMI  shift, and go to state 68


State 40

   44 DecList: Dec •
   45        | Dec • COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 44 (DecList)


State 41

   41 Def: Specifier DecList • SEMI
   42    | Specifier DecList • error

    error  shift, and go to state 70
    SEMI   shift, and go to state 71


State 42

   15 StructSpecifier: STRUCT ID LC DefList error •

    $default  reduce using rule 15 (StructSpecifier)


State 43

   13 StructSpecifier: STRUCT ID LC DefList RC •

    $default  reduce using rule 13 (StructSpecifier)


State 44

   40 DefList: Def DefList •

    $default  reduce using rule 40 (DefList)


State 45

   17 VarDec: VarDec • LB INT RB
   18       | VarDec • LB INT error
   25 ParamDec: Specifier VarDec •

    LB  shift, and go to state 22

    $default  reduce using rule 25 (ParamDec)


State 46

   21 FunDec: ID LP VarList error •

    $default  reduce using rule 21 (FunDec)


State 47

   19 FunDec: ID LP VarList RP •

    $default  reduce using rule 19 (FunDec)


State 48

   23 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 72
    ParamDec         go to state 33


State 49

   18 VarDec: VarDec LB INT error •

    $default  reduce using rule 18 (VarDec)


State 50

   17 VarDec: VarDec LB INT RB •

    $default  reduce using rule 17 (VarDec)


State 51

   72 Exp: ILLEGAL_TOKEN •

    $default  reduce using rule 72 (Exp)


State 52

   69 Exp: INT •

    $default  reduce using rule 69 (Exp)


State 53

   71 Exp: CHAR •

    $default  reduce using rule 71 (Exp)


State 54

   70 Exp: FLOAT •

    $default  reduce using rule 70 (Exp)


State 55

   64 Exp: ID • LP Args RP
   65    | ID • LP RP
   68    | ID •
   76    | ID • LP Args error
   77    | ID • LP error

    LP  shift, and go to state 73

    $default  reduce using rule 68 (Exp)


State 56

   32 Stmt: IF • LP Exp RP Stmt
   33     | IF • LP Exp RP Stmt ELSE Stmt
   37     | IF • LP Exp error Stmt

    LP  shift, and go to state 74


State 57

   34 Stmt: WHILE • LP Exp RP Stmt
   38     | WHILE • LP Exp error Stmt

    LP  shift, and go to state 75


State 58

   31 Stmt: RETURN • Exp SEMI
   36     | RETURN • Exp error

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 76


State 59

   62 Exp: MINUS • Exp

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 77


State 60

   63 Exp: NOT • Exp

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 78


State 61

   61 Exp: LP • Exp RP
   75    | LP • Exp error

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 79


State 62

   73 Exp: INVALID_NUMBER •

    $default  reduce using rule 73 (Exp)


State 63

   30 Stmt: CompSt •

    $default  reduce using rule 30 (Stmt)


State 64

   26 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 80


State 65

   28 StmtList: Stmt • StmtList

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    IF              shift, and go to state 56
    WHILE           shift, and go to state 57
    RETURN          shift, and go to state 58
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    LC              shift, and go to state 23
    INVALID_NUMBER  shift, and go to state 62

    $default  reduce using rule 27 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 81
    Stmt      go to state 65
    Exp       go to state 66


State 66

   29 Stmt: Exp • SEMI
   35     | Exp • error
   48 Exp: Exp • ASSIGN Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • LT Exp
   52    | Exp • LE Exp
   53    | Exp • GT Exp
   54    | Exp • GE Exp
   55    | Exp • NE Exp
   56    | Exp • EQ Exp
   57    | Exp • PLUS Exp
   58    | Exp • MINUS Exp
   59    | Exp • MUL Exp
   60    | Exp • DIV Exp
   66    | Exp • LB Exp RB
   67    | Exp • DOT ID
   74    | Exp • ILLEGAL_TOKEN Exp
   78    | Exp • LB Exp error

    error          shift, and go to state 82
    ILLEGAL_TOKEN  shift, and go to state 83
    ASSIGN         shift, and go to state 84
    OR             shift, and go to state 85
    AND            shift, and go to state 86
    LT             shift, and go to state 87
    LE             shift, and go to state 88
    GT             shift, and go to state 89
    GE             shift, and go to state 90
    NE             shift, and go to state 91
    EQ             shift, and go to state 92
    PLUS           shift, and go to state 93
    MINUS          shift, and go to state 94
    MUL            shift, and go to state 95
    DIV            shift, and go to state 96
    DOT            shift, and go to state 97
    LB             shift, and go to state 98
    SEMI           shift, and go to state 99


State 67

   47 Dec: VarDec ASSIGN • Exp

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 100


State 68

   43 Def: error DecList SEMI •

    $default  reduce using rule 43 (Def)


State 69

   45 DecList: Dec COMMA • DecList

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 101
    Dec      go to state 40


State 70

   42 Def: Specifier DecList error •

    $default  reduce using rule 42 (Def)


State 71

   41 Def: Specifier DecList SEMI •

    $default  reduce using rule 41 (Def)


State 72

   23 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 23 (VarList)


State 73

   64 Exp: ID LP • Args RP
   65    | ID LP • RP
   76    | ID LP • Args error
   77    | ID LP • error

    error           shift, and go to state 102
    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    RP              shift, and go to state 103
    INVALID_NUMBER  shift, and go to state 62

    Exp   go to state 104
    Args  go to state 105


State 74

   32 Stmt: IF LP • Exp RP Stmt
   33     | IF LP • Exp RP Stmt ELSE Stmt
   37     | IF LP • Exp error Stmt

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 106


State 75

   34 Stmt: WHILE LP • Exp RP Stmt
   38     | WHILE LP • Exp error Stmt

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 107


State 76

   31 Stmt: RETURN Exp • SEMI
   36     | RETURN Exp • error
   48 Exp: Exp • ASSIGN Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • LT Exp
   52    | Exp • LE Exp
   53    | Exp • GT Exp
   54    | Exp • GE Exp
   55    | Exp • NE Exp
   56    | Exp • EQ Exp
   57    | Exp • PLUS Exp
   58    | Exp • MINUS Exp
   59    | Exp • MUL Exp
   60    | Exp • DIV Exp
   66    | Exp • LB Exp RB
   67    | Exp • DOT ID
   74    | Exp • ILLEGAL_TOKEN Exp
   78    | Exp • LB Exp error

    error          shift, and go to state 108
    ILLEGAL_TOKEN  shift, and go to state 83
    ASSIGN         shift, and go to state 84
    OR             shift, and go to state 85
    AND            shift, and go to state 86
    LT             shift, and go to state 87
    LE             shift, and go to state 88
    GT             shift, and go to state 89
    GE             shift, and go to state 90
    NE             shift, and go to state 91
    EQ             shift, and go to state 92
    PLUS           shift, and go to state 93
    MINUS          shift, and go to state 94
    MUL            shift, and go to state 95
    DIV            shift, and go to state 96
    DOT            shift, and go to state 97
    LB             shift, and go to state 98
    SEMI           shift, and go to state 109


State 77

   48 Exp: Exp • ASSIGN Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • LT Exp
   52    | Exp • LE Exp
   53    | Exp • GT Exp
   54    | Exp • GE Exp
   55    | Exp • NE Exp
   56    | Exp • EQ Exp
   57    | Exp • PLUS Exp
   58    | Exp • MINUS Exp
   59    | Exp • MUL Exp
   60    | Exp • DIV Exp
   62    | MINUS Exp •
   66    | Exp • LB Exp RB
   67    | Exp • DOT ID
   74    | Exp • ILLEGAL_TOKEN Exp
   78    | Exp • LB Exp error

    MUL  shift, and go to state 95
    DIV  shift, and go to state 96
    DOT  shift, and go to state 97
    LB   shift, and go to state 98

    $default  reduce using rule 62 (Exp)


State 78

   48 Exp: Exp • ASSIGN Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • LT Exp
   52    | Exp • LE Exp
   53    | Exp • GT Exp
   54    | Exp • GE Exp
   55    | Exp • NE Exp
   56    | Exp • EQ Exp
   57    | Exp • PLUS Exp
   58    | Exp • MINUS Exp
   59    | Exp • MUL Exp
   60    | Exp • DIV Exp
   63    | NOT Exp •
   66    | Exp • LB Exp RB
   67    | Exp • DOT ID
   74    | Exp • ILLEGAL_TOKEN Exp
   78    | Exp • LB Exp error

    DOT  shift, and go to state 97
    LB   shift, and go to state 98

    $default  reduce using rule 63 (Exp)


State 79

   48 Exp: Exp • ASSIGN Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • LT Exp
   52    | Exp • LE Exp
   53    | Exp • GT Exp
   54    | Exp • GE Exp
   55    | Exp • NE Exp
   56    | Exp • EQ Exp
   57    | Exp • PLUS Exp
   58    | Exp • MINUS Exp
   59    | Exp • MUL Exp
   60    | Exp • DIV Exp
   61    | LP Exp • RP
   66    | Exp • LB Exp RB
   67    | Exp • DOT ID
   74    | Exp • ILLEGAL_TOKEN Exp
   75    | LP Exp • error
   78    | Exp • LB Exp error

    error          shift, and go to state 110
    ILLEGAL_TOKEN  shift, and go to state 83
    ASSIGN         shift, and go to state 84
    OR             shift, and go to state 85
    AND            shift, and go to state 86
    LT             shift, and go to state 87
    LE             shift, and go to state 88
    GT             shift, and go to state 89
    GE             shift, and go to state 90
    NE             shift, and go to state 91
    EQ             shift, and go to state 92
    PLUS           shift, and go to state 93
    MINUS          shift, and go to state 94
    MUL            shift, and go to state 95
    DIV            shift, and go to state 96
    DOT            shift, and go to state 97
    RP             shift, and go to state 111
    LB             shift, and go to state 98


State 80

   26 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 26 (CompSt)


State 81

   28 StmtList: Stmt StmtList •

    $default  reduce using rule 28 (StmtList)


State 82

   35 Stmt: Exp error •

    $default  reduce using rule 35 (Stmt)


State 83

   74 Exp: Exp ILLEGAL_TOKEN • Exp

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 112


State 84

   48 Exp: Exp ASSIGN • Exp

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 113


State 85

   50 Exp: Exp OR • Exp

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 114


State 86

   49 Exp: Exp AND • Exp

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 115


State 87

   51 Exp: Exp LT • Exp

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 116


State 88

   52 Exp: Exp LE • Exp

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 117


State 89

   53 Exp: Exp GT • Exp

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 118


State 90

   54 Exp: Exp GE • Exp

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 119


State 91

   55 Exp: Exp NE • Exp

    ILLEGAL_TOKEN   shift, and go to state 51
    INT             shift, and go to state 52
    CHAR            shift, and go to state 53
    FLOAT           shift, and go to state 54
    ID              shift, and go to state 55
    MINUS           shift, and go to state 59
    NOT             shift, and go to state 60
    LP              shift, and go to state 61
    INVALID_NUMBER  shift, and go to state 62

    Exp  go to state 120


State 92

   56 Exp: Exp EQ • Exp
